<resources>
    <string name="app_name">10_Fragments</string>
    <string name="input_email">Ввведите Email:</string>
    <string name="input_password">Password:</string>
    <string name="accept_agreement">Принять соглашение</string>
    <string name="login_button">Login</string>
    <string name="writeText">Введите данные:</string>
    <string name="form_not_true">Не проходит валидацию</string>
    <string name="item">Item</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="item4">Item 4</string>
    <string name="item5">Item 5</string>
</resources>


